<resources>
    <string name="app_name">OfficProject</string>
    <!--    Font Roboto-->
    <string name="font_roboto">Roboto-Thin.ttf</string>
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_ita">Roboto-ThinItalic.ttf</string>
    <string name="font_italic">Roboto-Italic.ttf</string>
    <string name="font_helveticaneue">helveticaneue.ttf</string>
    <string name="font_helveticaneue_light">helveticaneuelight.ttf</string>
    <string name="font_helveticaneue_medium">helveticaneuemedium.ttf</string>
    <string name="font_open_san_semibold">OpenSans-Semibold.ttf</string>
    <string name="font_open_san_light">OpenSans-Light.ttf</string>

    <!-- Title Fragment-->
    <string name="title_contacts">All Contacts</string>
    <string name="title_my_info">My Info</string>
    <string name="title_users">Users</string>
    <string name="title_tags">Tags</string>
    <string name="title_groups">Groups</string>
    <string name="title_settings">Settings</string>
    <string name="title_switch_company">Switch company</string>

    <!-- Screen Login-->
    <string name="login_edt_username">Username/Email</string>
    <string name="login_edt_password">Password</string>
    <string name="login_tv_error_login">Incrorrect username or password</string>
    <string name="login_tv_sign_up"><u>Sign up now</u></string>
    <string name="login_tv_forgot_password">Forgot your password ?</string>
    <string name="login_btn_login">Sign in</string>
    <string name="login_field_non_data">Please input your information</string>
    <string name="login_error_password">Password at least 6 letter</string>
    <string name="login_success">Login success</string>
    <string name="login_error_4xx">Description of error</string>


    <!--  Screen Sign up -->
    <string name="sign_up_tv_cancel">Cancel</string>
    <string name="sign_up_tv_title_sign_up">Sign up</string>
    <string name="sign_up_edt_email">Email</string>
    <string name="sign_up_edt_password">Password</string>
    <string name="sign_up_edt_confirm_password">Confirm password</string>
    <string name="sign_up_edt_company">Company</string>
    <string name="sign_up_btn_sign_up">Sign up</string>
    <string name="sign_up_succes">Sign up success</string>

    <!--  Screen NavigationView -->
    <string name="on_back_pressed">Press Back again to Exit.</string>
    <string name="menu_contacts">All Contacts</string>
    <string name="menu_users">Users</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_switch_company">Switch company</string>


    <!--  Screen Splash List company -->
    <string name="splash_log_out_success">Logout is success</string>
    <string name="splash_log_out_failure">Logout is failure</string>
    <string name="title_activity_tab_layout">TabLayout</string>


    <!-- Screen Favorite-->
    <string name="screen_favorite">Favotite</string>

    <!-- Screen Forgot Password-->
    <string name="forgot_password_information">Please enter your email address to get instructions</string>
    <string name="forgot_password_edt_hint">Email</string>
    <string name="forgot_password_btn_send_email">Send me reset instruction</string>
    <string name="forgot_password_tv_sign_in">Sign in</string>
    <string name="forgot_password_success">Please check your email to reset password</string>
    <string name="forgot_password_error">User not found</string>

    <!--  Screen Navigation View-->
    <string name="navtigation_view_item_company">Offic</string>
    <string name="navtigation_view_item_avatar_user_name">Van Trinh</string>
    <string name="activity_add_new_contacts_content">Store every conversation, email, call, meeting, document, and deal you\'ve ever had with a contact. With Highrise you\'ll always know who you talked, what was said, and when to fol-low-up next.</string>
    <string name="fragment_create_new_group_content">Groups are helpful when you only want certain people to be able to see a contact, note, email, box, or deal. For example, you could set a specific contact to only be visible to the \"marketing department\" or an email to only be visible to be \"executives\" team.</string>
    <string-array name="content">
        <item>Contacts</item>
        <item>Users</item>
        <item>Tags</item>
        <item>Groups</item>
        <item>Settings</item>
        <item>Switch company</item>
        <item>Log out</item>
    </string-array>


    <string-array name="categories">
        <item>home</item>
        <item>work</item>
        <item>mobile</item>
        <item>other</item>
    </string-array>

    <!-- screen all contacts -->

    <string name="contact_swip_delete">Delete</string>
    <string name="contact_swip_detail">Detail</string>
    <string name="contact_swip_favorite">Favorite</string>
    <string name="all_contacts_search_cancel">cancel</string>
    <string name="error_add_tags">Please enter new tag !!!</string>


    <!-- Screen Add Tags-->
    <string name="activity_add_tag_tv_title">Add Tags</string>
    <string name="activity_add_tag_tv_done">Done</string>
    <string name="activity_edt_add_tags">Add Tag</string>

    <!-- Screen Dialog Add Contacts-->
    <string name="tv_add_new_person">Add a new person</string>

    <!-- Screen Fragment Create Your First Groups-->
    <string name="btn_create_your_first_groups">Create your first group</string>
    <string name="tv_title_edit_profile">Edit</string>
    <string name="tv_done_profile">Done</string>

    <!-- screen add new person -->
    <string name="add_new_person_last_name_hint">Last name</string>
    <string name="add_new_person_first_name_hint">First name</string>
    <string name="add_new_person_title_hint">Title</string>
    <string name="add_contacts_custom_field">CUSTOM FIELDS:</string>
    <string name="add_contacts_network">SOCIAL NETWORKS:</string>
    <string name="add_contacts_facebook_hint">Facebook</string>
    <string name="add_contacts_twitter">Twitter</string>
    <string name="add_contacts_background_info">BACKGROUND INFO:</string>
    <string name="add_contacts_permission">PERMISSION:</string>
    <string name="add_contacts_tags">TAGS:</string>
    <string name="add_new_company_name">Name</string>
    <string name="add_contacts_permission_group">Me, plus this group</string>
    <string name="add_contacts_permission_just_me">Just me</string>
    <string name="add_contacts_permission_everyone">Everyone</string>
    <string name="add_contacts_permission_these_people">Me, plus these people</string>
    <string name="add_contacts_add_people">Plus more</string>
    <string name="add_custom_field_custom_field">Custom field</string>

    <!-- Screen Activity Edit Profile-->
    <string name="activity_edit_profile_text_email">Email</string>
    <string name="activity_edit_profile_text_user_name">Username</string>
    <string name="activity_edit_profile_text_password">Password</string>
    <string name="activity_edit_profile_text_confirm_pass">Confirm password</string>
    <string name="sync_contacts_dialog">\"Offic\" would like to access your contacts</string>
    <string name="tv_title_sync_contacts">Synchronise Contacts</string>

    <!-- contact detail-->
    <string name="contact_detail_custom_id">custom ID</string>
    <string name="contact_detail_facebook">facebook</string>
    <string name="contact_detail_linkedin">linkedIn</string>
    <string name="contact_detail_twitter">twitter</string>
    <string name="add_custom_field">Add custom field</string>

</resources>
