<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/create_your_first_groups_ln_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/create_your_first_groups_margin_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_create_first_groups" />


    </LinearLayout>


    <offic.htk.com.officproject.views.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/create_your_first_groups_margin_left_right"
        android:layout_marginRight="@dimen/create_your_first_groups_margin_left_right"
        android:layout_marginTop="@dimen/create_your_first_groups_margin_top_text"
        android:text="@string/fragment_create_new_group_content"
        android:textSize="@dimen/create_your_first_groups_text_size"
        font:font="@string/font_helveticaneue" />

    <offic.htk.com.officproject.views.CustomFontButton
        android:id="@+id/btn_create_your_first_groups"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_create_your_first_groups_height"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/btn_create_your_first_groups_margin"
        android:layout_marginRight="@dimen/btn_create_your_first_groups_margin"
        android:layout_marginTop="@dimen/btn_create_your_first_groups_margin_top"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/btn_create_your_first_groups"
        android:textColor="#ffffff"
        android:textSize="@dimen/btn_create_your_first_groups_text_size"
        font:font="@string/font_helveticaneue_light" />

</LinearLayout>