<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_login"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_contacts" />


    </LinearLayout>

    <offic.htk.com.officproject.views.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Build your contacts"
        android:textColor="#ffffff"
        android:textSize="20sp"
        font:font="@string/font_open_san_light" />

    <offic.htk.com.officproject.views.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_new_contacts_content"
        android:textColor="#ffffff"
        android:textSize="15sp"
        font:font="@string/font_helveticaneue" />

    <offic.htk.com.officproject.views.CustomFontButton
        android:id="@+id/btn_add_new_contacts"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="Add your first contact"
        android:textColor="#ffffff"
        android:textSize="17sp"
        font:font="@string/font_helveticaneue_light" />

</LinearLayout>