<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fm_toolbar"
        android:background="#f44336">

        <offic.htk.com.officproject.views.CustomFontTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_add_tag_tv_cancel_margin_left_right"
            android:layout_marginStart="@dimen/activity_add_tag_tv_cancel_margin_left_right"
            android:gravity="center"
            android:text="@string/sign_up_tv_cancel"
            android:textColor="@color/activity_add_tag_tv"
            android:textSize="@dimen/activity_add_tag_tv_text_size"
            font:font="@string/font_helveticaneue" />

        <offic.htk.com.officproject.views.CustomFontTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/activity_add_tag_tv_title"
            android:textColor="@color/activity_add_tag_tv"
            android:textSize="@dimen/activity_add_tag_tv_text_size"
            android:textStyle="bold"
            font:font="@string/font_helveticaneue" />

        <offic.htk.com.officproject.views.CustomFontTextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/activity_add_tag_tv_cancel_margin_left_right"
            android:layout_marginRight="@dimen/activity_add_tag_tv_cancel_margin_left_right"
            android:gravity="center"
            android:text="@string/activity_add_tag_tv_done"
            android:textColor="@color/activity_add_tag_tv"
            android:textSize="@dimen/activity_add_tag_tv_text_size"
            font:font="@string/font_helveticaneue" />
    </FrameLayout>
</LinearLayout>