<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_login"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/lnForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_img_logo_height"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_tv_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnForgot"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="50dp">

        <offic.htk.com.officproject.views.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_information"
            android:textColor="@color/forgot_password_text_color"
            android:textSize="@dimen/forgot_password_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_email_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_ln_input_info_height"
        android:layout_below="@+id/ln_tv_information"
        android:layout_marginEnd="@dimen/login_view_margin_right"
        android:layout_marginLeft="@dimen/login_view_margin_left"
        android:layout_marginRight="@dimen/login_view_margin_right"
        android:layout_marginStart="@dimen/login_view_margin_left"
        android:layout_marginTop="@dimen/login_ln_margin_top"
        android:background="@drawable/custom_edit_text"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="@dimen/login_ic_username_password_width"
            android:layout_height="@dimen/login_ic_username_password_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/login_ln_margin_top"
            android:contentDescription="@null"
            android:src="@drawable/ic_email" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/view" />

        <offic.htk.com.officproject.views.CustomFontEditText
            android:id="@+id/edt_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/forgot_password_edt_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/ic_cusor_text"
            android:textSize="@dimen/login_edt_input_info_text_size"
            font:font="@string/font_helveticaneue" />
    </LinearLayout>

    <offic.htk.com.officproject.views.CustomFontButton
        android:id="@+id/btn_send_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_sign_in_height"
        android:layout_below="@+id/ln_email_forgot_password"
        android:layout_marginEnd="@dimen/login_view_margin_right"
        android:layout_marginLeft="@dimen/login_view_margin_left"
        android:layout_marginRight="@dimen/login_view_margin_right"
        android:layout_marginStart="@dimen/login_view_margin_left"
        android:layout_marginTop="@dimen/login_btn_sign_in_margin_top"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/forgot_password_btn_send_email"
        android:textAllCaps="false"
        android:textColor="@color/login_tv_btn_login"
        android:textSize="@dimen/login_btn_sign_in_text_size"
        font:font="@string/font_helveticaneue_light">

    </offic.htk.com.officproject.views.CustomFontButton>

    <offic.htk.com.officproject.views.CustomFontTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_send_email"
        android:layout_marginTop="@dimen/login_tv_forgot_password_margin_top"
        android:gravity="center"
        android:text="@string/forgot_password_tv_sign_in"
        android:textColor="@color/login_tv_forgot_password"
        android:textSize="@dimen/login_edt_input_info_text_size"
        font:font="@string/font_helveticaneue" />
</RelativeLayout>
