<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ln_dialog_add_new"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_edit_text"
    android:orientation="vertical">

    <offic.htk.com.officproject.views.CustomFontTextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_dialog_cancel_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/tv_cancel_dialog_margin"
        android:gravity="center"
        android:text="@string/sync_contacts_dialog"
        android:textColor="@color/contacts_user_name_color"
        android:textSize="@dimen/tv_dialog_cancel_text_size"
        android:textStyle="bold"
        font:font="@string/font_helveticaneue_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_edit_text"
        android:orientation="horizontal">

        <offic.htk.com.officproject.views.CustomFontTextView
            android:id="@+id/tv_dont_allow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Don't Allow"
            android:textColor="#157efb"
            android:textSize="@dimen/tv_dialog_add_new_contacts"
            android:textStyle="bold"
            font:font="@string/font_helveticaneue" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#BDBDBD" />

        <offic.htk.com.officproject.views.CustomFontTextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="OK"
            android:textColor="#157efb"
            android:textSize="@dimen/tv_dialog_add_new_contacts"
            android:textStyle="bold"
            font:font="@string/font_helveticaneue" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD" />


</LinearLayout>